  - EntityTag.parse renamed to EntityTag.valueOf
  - UriInfo.getTemplateParameters renamed to UriInfo.getPathParameters
  - ApplicationConfig.getExtensibleMapping renamed to 
    ApplicationConfig.getMediaTypeMappings
  - Method parameter order of MessageBodyReader.readFrom has changed to be
    consistent with the method parameter order of MessageBodyWriter.writerTo.

release 0.7 (2008-04-18)
- The type javax.xml.bind.JAXBElement<T> can be used for reading and writing
  JAXB types that a not XML root elements from and to XML. TODO:JSON
  serialization.
- Renamed FormURLEncodedProperties to Form and changed the class to implement 
  javax.ws.rs.core.MultivaluedMap.
- Containers can be informed when they are required to reload, for example
  if new root resource classes have been added to removed, or class file
  definitions have changed while a VM is running.
  A com.sun.ws.rest.spi.container.ContainerNotifier instance may be 
  registered by adding a property to the ResourceConfig with the property name
  "com.sun.ws.rest.spi.container.ContainerNotifier" and a property value
  that is the instance of the ContainerNotifier.
  The ContainerNotifier instance may then notifier registered listeners
  when reloading is required.
- The com.sun.ws.rest.spi.container.servlet.ServletContainer class has
  a public load() method that can be invoked to dynamically reload the web
  web application if, for example, resource classes have been modified,
  added or removed.
- The class com.sun.ws.rest.api.core.ApplicationConfigAdapter can be
  used to adapt an instance of javax.ws.rs.core.ApplicationConfig to an
  instance of com.sun.ws.rest.api.core.ResourceConfig.
- Client API request building supports the addition of cookies that are 
  instances of javax.ws.rs.core.Cookie. Client API response supports obtaining
  the list of cookies returned by the server as instances of 
  javax.ws.rs.NewCookie.
- Renamed HttpContextAccess to HttpContext. Changed getHttpRequestContext